made changes for redirect_uri in airth site

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL=http://localhost:3000
 
-VITE_BACKEND_URL=https://influex-airth.vercel.app
+# VITE_BACKEND_URL=https://influex-airth-backend.vercel.app
 
 
 
-#kdsd
+#kdsd   
